--- a/demo/test_app/recommend_system_version2/templates/index.html
+++ b/demo/test_app/recommend_system_version2/templates/index.html
@@ -6,16 +6,98 @@
 {{ title }}
 {% endblock %}
 
+{% load static %}
 
 {# 替换内容 #}
 {% block content %}
-                <div class="carousel slide col-md-8 col-md-offset-2" id="carousel-851425">
+<link href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.css' %}" rel="stylesheet" xmlns="http://www.w3.org/1999/html">
+                <div class="carousel col-md-2">
+</p>
+<p>
+                        <h2 class="news_title">News</h2>
+</p>
+<br>
+<br>
+<p>
+            ﻿<div class="ttNews">
+	<div class="ttNews-li toutiao-li">
+		<div class="tt-title clearfix">
+			<div class="tt-titleLf">头条</div>
+
+				<div class="tt-titleRi dian">
+					<a href="https://www.eol.cn/e_html/gk/gkzcqzd/index.shtml">各省高考招生录取政策</a> <a href="https://gaokao.eol.cn/e_html/gk/gkjf/index.shtml">加分政策</a>
+				</div>
+	  </div>
+
+		<div class="tt-cont">
+		<div>
+			<a href="https://www.eol.cn/e_html/gk/fsx/index.shtml?proId=11">历年各省份高考录取分数线</a>
+				<a href="https://gaokao.eol.cn/e_html/gk/gktoudang/?proId=11">全国各省高考投档线</a>
+
+			 </div>
+		<div>
+			<a href="https://pan.quark.cn/s/67733a9275bf#/list/share?proId=11">高校录取分数线</a>
+			<a href="https://www.eol.cn/e_html/gk/dxpm/index.shtml?proId=11">大学排行榜</a> <a href="https://gaokao.eol.cn/e_html/gk/gktime/index.shtml?proId=11">2024各省高考时间</a>
+
+
+		 </div>
+		</div>
+	</div>
+
+
+	<div class="ttNews-li">
+		<div class="tt-title clearfix">
+			<div class="tt-titleLf">热点</div>
+			<div class="tt-titleRi dian">
+				<a href="https://www.eol.cn/e_html/gk/qjjhbm/index.html">2024强基简章</a> <a href="https://gaokao.eol.cn/e_html/gk/2024/2024qjzb/index.html">直播</a> <a href="https://www.eol.cn/e_html/gk/qjjhbm/xc.html">校测</a>
+
+				</div>
+		</div>
+		<div class="tt-cont">
+			<div>
+				<a href="https://www.eol.cn/e_html/gk/zhpj/index.shtml?proId=11">高校综合评价简章汇总</a>
+				<a href="https://gaokao.eol.cn/e_html/gk/gkst/2022st.shtml?proId=11">历年高考试题及答案汇总</a>
+
+				 </div>
+			<div>
+				<a href="https://www.eol.cn/e_html/gk/zhuanxiang/index.shtml?proId=11">2024年专项计划招生简章</a>
+				<a href="https://gaokao.eol.cn/e_html/gk/2022/985yx/index.html?proId=11">985</a> <a href="https://gaokao.eol.cn/e_html/gk/2022/211yx/index.html?proId=11">211大学名单</a>
+
+
+			</div>
+		</div>
+	</div>
+	<div class="ttNews-li lastNews-li">
+		<div class="tt-title clearfix">
+			<div class="tt-titleLf">关注</div>
+			<div class="tt-titleRi dian">
+				<a href="https://gaokao.eol.cn/e_html/gk/zhibo/index.html">2024年高考直播咨询会</a>
+				</div>
+		</div>
+		<div class="tt-cont">
+			<div>
+				<a href="https://gaokao.eol.cn/e_html/gk/2022/sylyx/index.html?proId=11">双一流大学在各省投档线</a>
+				<a href="https://www.eol.cn/e_html/gk/tszy/index.shtml?proId=11">国家特色专业名单</a>
+             </div>
+			 <div>
+				<a href="https://gaokao.eol.cn/e_html/gk/2022/gzdz/index.shtml?proId=11">各院校高职单招招生计划</a>
+				<a href="https://www.eol.cn/e_html/gk/gjzdxk/index.shtml?proId=11">国家重点学科名单</a>
+			</div>
+
+		</div>
+
+	</div>
+</div>
+                </div>
+                <div class="carousel slide col-md-8" id="carousel-851425">
                   <ol class="carousel-indicators">
                     <li class="" data-slide-to="0" data-target="#carousel-851425"></li>
                     <li data-slide-to="1" data-target="#carousel-851425" class="active"></li>
                     <li data-slide-to="2" data-target="#carousel-851425" class=""></li>
                   </ol>
                   <div class="carousel-inner">
+						<script src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.js' %}"></script>
+						<script src="{% static 'js/carousel-inner.js' %}"></script>
                     <div class="item active"> <img height="100%" width="100%" alt="" src="./static/image/清华大学.jpg">
                       <div class="carousel-caption" contenteditable="true">
                         <h4>自强不息、厚德载物</h4>
@@ -43,5 +125,52 @@
                   </div>
                     <a data-slide="prev" href="#carousel-851425" class="right carousel-control">‹</a> <a data-slide="next" href="#carousel-851425" class="right carousel-control">›</a>
                   <a data-slide="prev" href="#carousel-851425" class="left carousel-control">‹</a> <a data-slide="next" href="#carousel-851425" class="right carousel-control">›</a> </div>
+                <div class="carousel col-md-2">
+					</p>
+<p>
+                        <h2 class="news_title">Information</h2>
+</p>
+<br>
+
+<br>
+<p>
+                        <div class="dzBox">
+                <div class="dz-cont">
+                    <div class="dz-ul first-dz-ul" data-id="2">
+
+                        <!-- saved from url=(0022)http://internet.e-mail -->
+                        <div class="ad-liBox clearfix">
+	<div data-eol-ad="8242" data-eol-tpl="img" class="ad-liRi"><a href="http://www.eol.cn/e_html/gk/gjzdxk/index.shtml" data-publish="0"><img src="https://img1.eol.cn/e_images/gk/2019/PC/spsmall201.jpg" alt=""></a></div>
+</div>
+
+</p>
+<p>
+
+	<div data-eol-ad="8242" data-eol-tpl="img" class="ad-liRi">
+		<a href="https://gaokao.eol.cn/e_html/gk/2022/gzdz/index.shtml"><img src="https://img.eol.cn/e_images/gk/2018/dzbk21485.jpg"></a>
+		<!--<a href="https://www.must.edu.mo/"><img src="https://img1.eol.cn/images/ed/gaokao/2012/amkjdx_18gz224-85.jpg" /></a>-->
+	</div>
+
+
+
+</p>
+						<br>
+						<br>
+<p>
+	<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://www.eol.cn/e_html/gk/gjzdxk/index.shtml" data-publish="0">全国高校国家重点学科名单</a></div>
+<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://www.eol.cn/e_html/gk/tszy/index.shtml" data-publish="0">全国高校特色专业建设名单</a></div>
+<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://www.eol.cn/e_html/gk/xueke/index.shtml" data-publish="0">第四轮高校学科评估结果  </a></div>
+<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://www.eol.cn/e_html/gk/ssgkzt/index.shtml" data-publish="0">《数说高考》用数据解读高考 </a></div>
+<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://gaokao.eol.cn/e_html/gk/zyjd2017/index.shtml" data-publish="0">《专业解读》从这里看懂专业  </a></div>
+<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://gaokao.eol.cn/e_html/gk/2024/zyjd/index.html?proId=11" data-publish="0">全国高校专业解读视频汇总</a></div>
+<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://gaokao.eol.cn/e_html/gk/2024/zyjd/index.htm" data-publish="0">网站导航</a></div>
+
+
+                        <div class="jzgd"><a href="//gaokao.eol.cn/zhidao/?proId=11">更多资讯&gt;&gt;</a></div>
+                    </div>
+
+                </div>
+            </div>
+                </div>
 
 {% endblock %}
