--- a/demo/test_app/recommend_system_version2/Test/templates/test.html
+++ b/demo/test_app/recommend_system_version2/Test/templates/test.html
@@ -6,10 +6,13 @@
 {{ title }}
 {% endblock %}
 
+{% load static %}
+
 
 {# 替换内容 #}
 {% block content %}
     <div class="container">
+<link href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.css' %}" rel="stylesheet" xmlns="http://www.w3.org/1999/html">
     <div class="col-md-3 col-md-offset-2">共48题</div>
         <div class="col-md-4 col-md-offset-4">
             <div class="row" >
