--- a/demo/test_app/recommend_system_version2/static/bootstrap-3.3.7-dist/css/bootstrap.css
+++ b/demo/test_app/recommend_system_version2/static/bootstrap-3.3.7-dist/css/bootstrap.css
@@ -44,6 +44,7 @@ template {
 }
 a {
   background-color: transparent;
+
 }
 a:active,
 a:hover {
@@ -1097,7 +1098,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #007bff;
   text-decoration: none;
 }
 a:hover,
@@ -1337,7 +1338,7 @@ mark,
   color: #777;
 }
 .text-primary {
-  color: #337ab7;
+  color: #007bff;
 }
 a.text-primary:hover,
 a.text-primary:focus {
@@ -1351,7 +1352,7 @@ a.text-success:focus {
   color: #2b542c;
 }
 .text-info {
-  color: #31708f;
+  color: #007bff;
 }
 a.text-info:hover,
 a.text-info:focus {
@@ -1373,7 +1374,7 @@ a.text-danger:focus {
 }
 .bg-primary {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #007bff;
 }
 a.bg-primary:hover,
 a.bg-primary:focus {
@@ -1964,7 +1965,12 @@ pre code {
     width: 33.33333333%;
   }
   .col-md-3 {
-    width: 25%;
+    /*width: 25%;*/
+    font-size: 20px;  /* 调整这个值来改变字体大小 */
+    color: #0a0a0a;  /* 调整这个值来改变字体颜色 */
+    /*background-color: #f0f0f0;  !* 调整这个值来改变背景色 *!*/
+    padding: 10px;  /* 调整这个值来改变填充 */
+    margin: 10px 0;  /* 调整这个值来改变边距 */
   }
   .col-md-2 {
     width: 16.66666667%;
@@ -3115,26 +3121,26 @@ fieldset[disabled] .btn-default.focus {
 }
 .btn-primary {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #286090;
-  border-color: #122b40;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
@@ -3146,8 +3152,8 @@ fieldset[disabled] .btn-default.focus {
 .btn-primary.active.focus,
 .open > .dropdown-toggle.btn-primary.focus {
   color: #fff;
-  background-color: #204d74;
-  border-color: #122b40;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -3163,11 +3169,11 @@ fieldset[disabled] .btn-primary:focus,
 .btn-primary.disabled.focus,
 .btn-primary[disabled].focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-primary .badge {
-  color: #337ab7;
+  color: #007bff;
   background-color: #fff;
 }
 .btn-success {
@@ -3229,26 +3235,26 @@ fieldset[disabled] .btn-success.focus {
 }
 .btn-info {
   color: #fff;
-  background-color: #5bc0de;
-  border-color: #46b8da;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-info:focus,
 .btn-info.focus {
   color: #fff;
-  background-color: #31b0d5;
-  border-color: #1b6d85;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-info:hover {
   color: #fff;
-  background-color: #31b0d5;
-  border-color: #269abc;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-info:active,
 .btn-info.active,
 .open > .dropdown-toggle.btn-info {
   color: #fff;
-  background-color: #31b0d5;
-  border-color: #269abc;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-info:active:hover,
 .btn-info.active:hover,
@@ -3260,8 +3266,8 @@ fieldset[disabled] .btn-success.focus {
 .btn-info.active.focus,
 .open > .dropdown-toggle.btn-info.focus {
   color: #fff;
-  background-color: #269abc;
-  border-color: #1b6d85;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-info:active,
 .btn-info.active,
@@ -3277,11 +3283,11 @@ fieldset[disabled] .btn-info:focus,
 .btn-info.disabled.focus,
 .btn-info[disabled].focus,
 fieldset[disabled] .btn-info.focus {
-  background-color: #5bc0de;
-  border-color: #46b8da;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .btn-info .badge {
-  color: #5bc0de;
+  color: #007bff;
   background-color: #fff;
 }
 .btn-warning {
@@ -3400,7 +3406,7 @@ fieldset[disabled] .btn-danger.focus {
 }
 .btn-link {
   font-weight: normal;
-  color: #337ab7;
+  color: #007bff;
   border-radius: 0;
 }
 .btn-link,
@@ -3569,7 +3575,7 @@ tbody.collapse.in {
 .dropdown-menu > .active > a:focus {
   color: #fff;
   text-decoration: none;
-  background-color: #337ab7;
+  background-color: #007bff;
   outline: 0;
 }
 .dropdown-menu > .disabled > a,
@@ -4004,7 +4010,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eee;
-  border-color: #337ab7;
+  border-color: #007bff;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4097,7 +4103,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #007bff;
 }
 .nav-stacked > li {
   float: none;
@@ -4724,7 +4730,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #337ab7;
+  color: #007bff;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -4758,8 +4764,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 3;
   color: #fff;
   cursor: default;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -4875,7 +4881,7 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #337ab7;
+  background-color: #007bff;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
@@ -4889,11 +4895,11 @@ a.label:focus {
   background-color: #449d44;
 }
 .label-info {
-  background-color: #5bc0de;
+  background-color: #007bff;
 }
 .label-info[href]:hover,
 .label-info[href]:focus {
-  background-color: #31b0d5;
+  background-color: #007bff;
 }
 .label-warning {
   background-color: #f0ad4e;
@@ -4943,7 +4949,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #337ab7;
+  color: #007bff;
   background-color: #fff;
 }
 .list-group-item > .badge {
@@ -5018,7 +5024,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #337ab7;
+  border-color: #007bff;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -5067,7 +5073,7 @@ a.thumbnail.active {
   color: #2b542c;
 }
 .alert-info {
-  color: #31708f;
+  color: #007bff;
   background-color: #d9edf7;
   border-color: #bce8f1;
 }
@@ -5140,7 +5146,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #337ab7;
+  background-color: #007bff;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
   -webkit-transition: width .6s ease;
@@ -5170,7 +5176,7 @@ a.thumbnail.active {
   background-image:         linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
 }
 .progress-bar-info {
-  background-color: #5bc0de;
+  background-color: #007bff;
 }
 .progress-striped .progress-bar-info {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
@@ -5304,8 +5310,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5353,12 +5359,12 @@ button.list-group-item-success.active:focus {
   border-color: #3c763d;
 }
 .list-group-item-info {
-  color: #31708f;
+  color: #007bff;
   background-color: #d9edf7;
 }
 a.list-group-item-info,
 button.list-group-item-info {
-  color: #31708f;
+  color: #007bff;
 }
 a.list-group-item-info .list-group-item-heading,
 button.list-group-item-info .list-group-item-heading {
@@ -5368,7 +5374,7 @@ a.list-group-item-info:hover,
 button.list-group-item-info:hover,
 a.list-group-item-info:focus,
 button.list-group-item-info:focus {
-  color: #31708f;
+  color: #007bff;
   background-color: #c4e3f3;
 }
 a.list-group-item-info.active,
@@ -5378,8 +5384,8 @@ button.list-group-item-info.active:hover,
 a.list-group-item-info.active:focus,
 button.list-group-item-info.active:focus {
   color: #fff;
-  background-color: #31708f;
-  border-color: #31708f;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .list-group-item-warning {
   color: #8a6d3b;
@@ -5701,22 +5707,22 @@ button.list-group-item-danger.active:focus {
   border-bottom-color: #ddd;
 }
 .panel-primary {
-  border-color: #337ab7;
+  border-color: #007bff;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #337ab7;
+  border-top-color: #007bff;
 }
 .panel-primary > .panel-heading .badge {
-  color: #337ab7;
+  color: #007bff;
   background-color: #fff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #337ab7;
+  border-bottom-color: #007bff;
 }
 .panel-success {
   border-color: #d6e9c6;
@@ -5740,7 +5746,7 @@ button.list-group-item-danger.active:focus {
   border-color: #bce8f1;
 }
 .panel-info > .panel-heading {
-  color: #31708f;
+  color: #007bff;
   background-color: #d9edf7;
   border-color: #bce8f1;
 }
@@ -5749,7 +5755,7 @@ button.list-group-item-danger.active:focus {
 }
 .panel-info > .panel-heading .badge {
   color: #d9edf7;
-  background-color: #31708f;
+  background-color: #007bff;
 }
 .panel-info > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #bce8f1;
@@ -6753,5 +6759,118 @@ button.close {
   .hidden-print {
     display: none !important;
   }
+}
+.news_title {
+    float: none;
+    width: 200px;
+    height: 44px;
+    line-height: 44px;
+    text-align: center;
+    background: #007bff;
+    font-size: 28px;
+    font-weight: bold;
+    color: white;
+    margin: auto;
+    display: block;
+}
+.ttNews{
+	float: left;
+	width: 355px;
+}
+.ttNews-li{
+	padding-bottom: 22px;
+	padding-top: 22px;
+	border-bottom: 1px solid #E5E5E5;
+}
+.tt-titleLf{
+	float: left;
+	width: 46px;
+	height: 22px;
+	line-height: 22px;
+	text-align: center;
+	background: #007bff;
+	font-size: 14px;
+	font-weight: bold;
+	color: white;
+}
+.tt-titleRi{
+	float: left;
+	width: 260px;
+	line-height: 22px;
+	font-size: 17px;
+	color: #333333;
+	margin-left: 10px;
+}
+.tt-titleRi a{
+	color: #333333;
+}
+.tt-cont{
+	font-size: 0;
+	margin-top: 12px;
+}
+.tt-cont a{
+	font-size: 14px;
+	color: #666666;
+	line-height: 22px;
+	margin-right:10px ;
+}
+.tt-cont a:hover{
+	color: #E50113;
+}
+.toutiao-li{
+	padding-top: 5px !important;
+}
+.toutiao-li .tt-titleLf{
+	background: #f81608;
+}
+.toutiao-li .tt-titleRi a{
+	color: #007bff !important;
+	font-weight: bold;
+}
+.ad-liRi {
+    text-align: center;
+}
+.short-select {
+    max-width: 100px;  /* 调整这个值来改变选项框的最大宽度 */
+    /*margin: auto;  !* 添加这行来使元素居中 *!*/
+}
+.form-group div, .form-group input, .form-group select {
+    font-size: 16px;  /* 调整这个值来改变字体大小 */
+}
+.form-group div {
+    width: 80px;  /* 调整这个值来改变标题的宽度 */
+    text-align: left;  /* 让标题左对齐 */
+}
+.add-row {
+    padding: 30px;  /* 调整这个值来改变内部空间大小 */
+    width: 100%;
+}
+.custom-text {
+    background-color: #dedef8;
+    padding: 30px;
+    width: 60%;
+    margin: auto;
+    text-align: center;
+    font-size: 18px;
+}
+.btn-retest {
+    background-color: #007bff;  /* 你的颜色 */
+    border-color: #007bff;  /* 你的颜色 */
+    color: white;
+}
+
+.btn-retest:hover {
+    background-color: #0170e7;  /* 你的更深的颜色 */
+    border-color: #0170e7;  /* 你的更深的颜色 */
+    color: white;
+}
+.form-font-size {
+    font-size: 14px; /* 你想要的字体大小 */
+}
+.custom-button-size {
+    padding: 30px 30px; /* 调整这个值来改变按钮的大小 */
+    background-color: #0170e7;  /* 你的更深的颜色 */
+    border-color: #0170e7;  /* 你的更深的颜色 */
+    color: white;
 }
 /*# sourceMappingURL=bootstrap.css.map */
