--- a/demo/test_app/recommend_system_version2/school_info/templates/school_list.html
+++ b/demo/test_app/recommend_system_version2/school_info/templates/school_list.html
@@ -53,7 +53,7 @@
     {% endfor %}
 </table>
 {#翻页按钮#}
-<div class="col-sm-offset-2">
+<div class="col-sm">
 <nav aria-label="Page navigation">
   <ul class="pagination">
     {#  第一页  #}
