--- a/demo/test_app/recommend_system_version2/templates/base.html
+++ b/demo/test_app/recommend_system_version2/templates/base.html
@@ -81,6 +81,7 @@
 
         <div class="collapse navbar-collapse" id="my-nav">
           <ul class="nav navbar-nav">
+              <li class="active"><a href="/Qwen_Chatbot">智能问答机器人</a></li>
               <li class="active"><a href="/student_info">个人信息</a></li>
               <li class="active"><a href="/analysis">问卷调查</a></li>
               <li class="active"><a href="/school_info">普通院校信息查询</a></li>
