--- a/demo/test_app/recommend_system_version2/templates/index.html
+++ b/demo/test_app/recommend_system_version2/templates/index.html
@@ -89,15 +89,20 @@
 	</div>
 </div>
                 </div>
-                <div class="carousel slide col-md-8" id="carousel-851425">
+                <div class="carousel slide col-md-8" id="carousel-851425" data-ride="carousel">
+					<style>
+    #carousel-851425 {
+        margin-left: 20px;  /* 调整这个值来改变轮播图向右移动的距离 */
+    }
+</style>
+				<script src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.js' %}"></script>
+				<script src="{% static 'js/carousel-inner.js' %}"></script>
                   <ol class="carousel-indicators">
                     <li class="" data-slide-to="0" data-target="#carousel-851425"></li>
                     <li data-slide-to="1" data-target="#carousel-851425" class="active"></li>
                     <li data-slide-to="2" data-target="#carousel-851425" class=""></li>
                   </ol>
                   <div class="carousel-inner">
-						<script src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.js' %}"></script>
-						<script src="{% static 'js/carousel-inner.js' %}"></script>
                     <div class="item active"> <img height="100%" width="100%" alt="" src="./static/image/清华大学.jpg">
                       <div class="carousel-caption" contenteditable="true">
                         <h4>自强不息、厚德载物</h4>
@@ -125,10 +130,10 @@
                   </div>
                     <a data-slide="prev" href="#carousel-851425" class="right carousel-control">‹</a> <a data-slide="next" href="#carousel-851425" class="right carousel-control">›</a>
                   <a data-slide="prev" href="#carousel-851425" class="left carousel-control">‹</a> <a data-slide="next" href="#carousel-851425" class="right carousel-control">›</a> </div>
-                <div class="carousel col-md-2">
+                <div class="carousel col-md-1">
 					</p>
 <p>
-                        <h2 class="news_title">Information</h2>
+                        <h2 class="news_title2">Information</h2>
 </p>
 <br>
 
@@ -157,16 +162,16 @@
 						<br>
 						<br>
 <p>
-	<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://www.eol.cn/e_html/gk/gjzdxk/index.shtml" data-publish="0">全国高校国家重点学科名单</a></div>
-<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://www.eol.cn/e_html/gk/tszy/index.shtml" data-publish="0">全国高校特色专业建设名单</a></div>
-<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://www.eol.cn/e_html/gk/xueke/index.shtml" data-publish="0">第四轮高校学科评估结果  </a></div>
-<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://www.eol.cn/e_html/gk/ssgkzt/index.shtml" data-publish="0">《数说高考》用数据解读高考 </a></div>
-<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://gaokao.eol.cn/e_html/gk/zyjd2017/index.shtml" data-publish="0">《专业解读》从这里看懂专业  </a></div>
-<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://gaokao.eol.cn/e_html/gk/2024/zyjd/index.html?proId=11" data-publish="0">全国高校专业解读视频汇总</a></div>
-<div data-eol-ad="8237" class="gkdt-li dian"><a href="https://gaokao.eol.cn/e_html/gk/2024/zyjd/index.htm" data-publish="0">网站导航</a></div>
+	<div data-eol-ad="8237" class="tt-cont"><a href="https://www.eol.cn/e_html/gk/gjzdxk/index.shtml" data-publish="0">全国高校国家重点学科名单</a></div>
+<div data-eol-ad="8237" class="tt-cont"><a href="https://www.eol.cn/e_html/gk/tszy/index.shtml" data-publish="0">全国高校特色专业建设名单</a></div>
+<div data-eol-ad="8237" class="tt-cont"><a href="https://www.eol.cn/e_html/gk/xueke/index.shtml" data-publish="0">第四轮高校学科评估结果  </a></div>
+<div data-eol-ad="8237" class="tt-cont"><a href="https://www.eol.cn/e_html/gk/ssgkzt/index.shtml" data-publish="0">《数说高考》用数据解读高考 </a></div>
+<div data-eol-ad="8237" class="tt-cont"><a href="https://gaokao.eol.cn/e_html/gk/zyjd2017/index.shtml" data-publish="0">《专业解读》从这里看懂专业  </a></div>
+<div data-eol-ad="8237" class="tt-cont"><a href="https://gaokao.eol.cn/e_html/gk/2024/zyjd/index.html?proId=11" data-publish="0">全国高校专业解读视频汇总</a></div>
+<div data-eol-ad="8237" class="tt-cont"><a href="https://gaokao.eol.cn/e_html/gk/2024/zyjd/index.htm" data-publish="0">网站导航</a></div>
 
 
-                        <div class="jzgd"><a href="//gaokao.eol.cn/zhidao/?proId=11">更多资讯&gt;&gt;</a></div>
+                        <div class="tt-cont"><a href="//gaokao.eol.cn/zhidao/?proId=11">更多资讯&gt;&gt;</a></div>
                     </div>
 
                 </div>
